# worlds-history-sim-rs

./: .gitignore  Cargo.toml  build_all.sh.ps1  rustfmt.toml
.cargo/: config.toml
.github/workflows/: release.yaml
planet/: Cargo.toml
planet/src/: biome.rs  human_group.rs  lib.rs  macros.rs  math_util.rs  perlin.rs  saving.rs  terrain_cell.rs  world.rs  world_manager.rs
planet/src/rendering/: mod.rs
planet/src/saving/: mod.rs  terrain_cell.rs  world.rs
save/: Cargo.toml
save/src/: lib.rs  math_util.rs  world.rs  world_manager.rs
src/: macros.rs  main.rs  planet_renderer.rs  plugins.rs  ui_helpers.rs  world_plugins.rs
src/components/: markers.rs  mod.rs
src/components/panning/: mod.rs
src/gui/: mod.rs  widget.rs  window.rs
src/gui/widgets/: info_panel.rs  mod.rs  toolbar.rs
src/gui/windows/: mod.rs  overlay.rs  save_load.rs  tile_info.rs  world_overlay_selection.rs  world_view_selection.rs
src/plugins/: mod.rs  panning_plugin.rs  world_plugins.rs
src/resources/: mod.rs
