[package]
name = "worlds-history-sim-rs"
version = "0.1.2"
edition = "2021"
resolver = "2"

[profile.release]
strip = "symbols"
lto = "thin"
opt-level = 3
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
[profile.release.package."*"]
opt-level = 3
codegen-units = 1
[profile.dev.build-override]
opt-level = 3
codegen-units = 1
[profile.release.build-override]
opt-level = 3
codegen-units = 1

[features]
# bevy/trace_chrome for tracing by function
# https://github.com/bevyengine/bevy/blob/main/docs/profiling.md
logging = ["planet/logging"]
render = ["bevy/bevy_asset", "bevy/bevy_winit", "bevy/x11", "bevy/wayland", "bevy/render", "planet/render", "dep:fxhash", "dep:bevy_egui"]
default = ["render", "logging"]

[dependencies.planet]
path = "planet"
default-features = false

[dependencies.bevy]
version = "0.8.1"
default-features = false

[dependencies.fxhash]
version = "0.2.1"
optional = true

[dependencies.bevy_egui]
version = "0.16.1"
optional = true
default-features = false
# features = ["manage_clipboard"] # In the future, when I add text input.