[package]
name = "worlds-history-sim-rs"
version = "0.3.1"
edition = "2021"
resolver = "2"

[profile.release]
strip = "symbols"
lto = "thin"
opt-level = 3
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
[profile.release.package."*"]
opt-level = 3
codegen-units = 1
[profile.dev.build-override]
opt-level = 3
codegen-units = 1
[profile.release.build-override]
opt-level = 3
codegen-units = 1

[features]
# bevy/trace_chrome for tracing by function
# https://github.com/bevyengine/bevy/blob/main/docs/profiling.md
logging = ["planet/logging"]
render = ["bevy/bevy_asset", "bevy/bevy_winit", "bevy/x11", "bevy/wayland", "bevy/render", "planet/render", "dep:fxhash", "dep:bevy_egui", "dep:tinyfiledialogs"]
default = ["render", "logging"]

[dependencies.planet]
path = "planet"
default-features = false

[dependencies.bevy]
version = "0.9"
default-features = false

[dependencies.fxhash]
version = "0.2.1"
optional = true

[dependencies.bevy_egui]
version = "0.17"
optional = true
default-features = false
features = ["manage_clipboard"]

[dependencies.tinyfiledialogs]
version = "3.9.1"
optional = true

[dependencies.futures-lite]
version = "1.12.0"
default-features = false

[dependencies.crossbeam-channel]
version = "0.5.6"
default-features = false
features = ["std"]