[package]
name = "planet"
version = "0.1.0"
edition = "2021"

[features]
debug = []
planet_view = ["render"]
render = ["bevy/render"]
default = ["render", "debug", "planet_view"]

[dependencies.rand]
version = "0.8.5"

[dependencies.bevy]
version = "0.8"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dependencies.ron]
version = "0.7.1"