[package]
name = "planet"
version = "0.3.0"
edition = "2021"

[profile]
release = { strip = "symbols", lto = "thin", opt-level = "z" }

[features]
logging = []
render = ["bevy/render"]
default = ["logging", "render"]

[dependencies.rand]
version = "0.8.5"

[dependencies.bevy]
version = "0.9.0"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dependencies.ron]
version = "0.8.0"